# automotive-auction-risk-engine

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
artifacts/: cluster_profiles.json  feature_importance.json  gem_candidates.json  metrics.json  model_comparison.json  pipeline_architecture.json  risk_predictions_sample.json
data/: README.md  data_train.csv
docs/: METHODOLOGY.md
requirements/: base.txt  test.txt
scripts/: run_pipeline.py
src/auto_risk/: __init__.py  artifacts.py  cleaning.py  config.py  data.py  evaluation.py  features.py  gem.py  modeling.py  preprocessing.py
tests/: test_cleaning.py  test_features.py  test_gem.py
